syntax = "proto3";

package cart;

service CartService {
  rpc AddToCart(AddToCartRequest) returns (AddToCartResponse);
  rpc GetCart(GetCartRequest) returns (GetCartResponse);
}

message AddToCartRequest {
  int32 user_id = 1;
  int32 product_id = 2;
  int32 quantity = 3;
}

message AddToCartResponse {
  string message = 1;
}

message GetCartRequest {
  int32 user_id = 1;
}

message GetCartResponse {
  repeated CartItem items = 1;
}

message CartItem {
  int32 product_id = 1;
  int32 quantity = 2;
}
